cabal-version:      2.4
name:               lollipops
version:            0.1.0.0
author:             Adam Paszke
maintainer:         apaszke@google.com

library
  exposed-modules:  LinearA, LinearB
  build-depends:    base ==4.*, containers, mtl, prettyprinter
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options: -Wall -Wno-name-shadowing
  default-extensions: OverloadedStrings, LambdaCase

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules: LinearASpec, LinearBSpec
  ghc-options: -Wall
  hs-source-dirs:
      test
  build-depends:
      base ==4.*
    , hspec ==2.*
    , lollipops
    , containers
    , prettyprinter
  default-language: Haskell2010
  build-tool-depends: hspec-discover:hspec-discover == 2.*
  default-extensions: OverloadedStrings, LambdaCase
