cabal-version: 1.12

name:           parallel-effects-exploration
version:        0.1.0.0
author:         Daniel Johnson
maintainer:     ddjohnson@google.com
copyright:      2021 Google LLC
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/google-research/dex-lang/tree/parallel-effects-exploration

library
  exposed-modules:
      Lib
      Table
      TableEffects
      TableEffectsExamples
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable parallel-effects-exploration-exe
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , parallel-effects-exploration
  default-language: Haskell2010

test-suite parallel-effects-exploration-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , parallel-effects-exploration
  default-language: Haskell2010
